src/objects/pse__Integration_Hub_Connector_Jira_PSA__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings for configuring the Jira - PSA integration.</description>
    <fields>
        <fullName>pse__Email__c</fullName>
        <description>Email address for receiving error notifications if the Integration with Jira fails.</description>
        <inlineHelpText>Email address for receiving error notifications if the Integration with Jira fails.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>pse__Jira_Application_URL__c</fullName>
        <description>The URL to the Jira application. Used for authentication.</description>
        <inlineHelpText>The URL to the Jira application. Used for authentication.</inlineHelpText>
        <label>Jira Application URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pse__Jira_Issue_Status_Category__c</fullName>
        <defaultValue>&apos;Done&apos;</defaultValue>
        <description>Category of Jira issue statuses used for updating PSA projects.</description>
        <inlineHelpText>When the Map PSA Projects to Jira Issues field is selected, determines the category of Jira issue statuses that update the mapped project field with the value defined in PSA Field Value for Updating Projects.</inlineHelpText>
        <label>Jira Issue Status Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Jira_Issue_Type__c</fullName>
        <defaultValue>&apos;Epic&apos;</defaultValue>
        <description>When the Enable Syncing Projects with Jira Issues field is selected, determines the type of Jira issues PSA projects are synced with.</description>
        <inlineHelpText>When the Enable Syncing Projects with Jira Issues field is selected, determines the type of Jira issues PSA projects are synced with. This value is case-sensitive and the issue type must exist in your Jira application.</inlineHelpText>
        <label>Jira Issue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Jira_Welcome_Email_for_Synced_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Jira Notification Email for Synced Resources</description>
        <inlineHelpText>Indicates whether PSA resources synced to Jira receive an email notification with their Jira username and a link to set their password.</inlineHelpText>
        <label>Jira Welcome Email for Synced Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Map_PSA_Projects_to_Jira_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, PSA projects are mapped to Jira issues, instead of to Jira projects.</description>
        <inlineHelpText>When selected, PSA projects are mapped to Jira issues, instead of to Jira projects. The type of Jira issue is determined by the value of the Jira Issue Type field.</inlineHelpText>
        <label>Map PSA Projects to Jira Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Max_Resource_Days_Per_Week__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Maximum number of timecard days time can be logged against each week for a resource.</description>
        <inlineHelpText>Maximum number of timecard days, starting with Monday, time can be logged against each week for a resource. You can enter a whole number between 1 and 7. For example, enter 5 to enable time logging for Monday to Friday.</inlineHelpText>
        <label>Max Resource Days Per Week</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Max_Resource_Hours_Per_Day__c</fullName>
        <defaultValue>8.0</defaultValue>
        <description>Maximum number of timecard hours that can be logged each day for a resource.</description>
        <inlineHelpText>Maximum number of timecard hours that can be logged each day for a resource. You can enter a value between 1 and 24.</inlineHelpText>
        <label>Max Resource Hours Per Day</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__PSA_Field_Value_for_Updating_Projects__c</fullName>
        <defaultValue>&apos;true&apos;</defaultValue>
        <description>Value used to update a specified PSA project field when a Jira issue is set to a specified status.</description>
        <inlineHelpText>When the Map PSA Projects to Jira Issues field is selected, determines the value with which the mapped project field is updated when a Jira issue has the status defined in Jira Issue Status Category. This value is case-sensitive.</inlineHelpText>
        <label>PSA Field Value for Updating Projects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Issue_Field__c</fullName>
        <defaultValue>&apos;Parent Link&apos;</defaultValue>
        <description>Name of the Jira custom field used to link an issue to a parent issue type.</description>
        <inlineHelpText>Name of the Jira custom field used to link an issue to a parent issue type, for example, Parent Link. The relationship can have multiple levels, but the issue type defined in Jira Issue Type is the highest one taken into account.</inlineHelpText>
        <label>Parent Issue Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Sync_Jira_Work_Logs_to_PSA_Timecards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Jira work logs should be synchronized to PSA timecards.</description>
        <inlineHelpText>Indicates whether Jira work logs should be synchronized to PSA timecards. Automatically populates when the Sync Work Logs from Jira to Timecards in PSA workflow is enabled using the Feature Console.</inlineHelpText>
        <label>Sync Jira Work Logs to PSA Timecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Sync_PSA_Projects_to_Jira_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether PSA projects should be synchronized to Jira issues.</description>
        <inlineHelpText>Indicates whether PSA projects should be synchronized to Jira issues. Automatically populates when the Sync Projects from PSA to Issues in Jira workflow is enabled using the Feature Console.</inlineHelpText>
        <label>Sync PSA Projects to Jira Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Sync_PSA_Projects_to_Jira_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether PSA projects should be synchronized to Jira projects.</description>
        <inlineHelpText>Indicates whether PSA projects should be synchronized to Jira projects. Automatically populates when the Sync Projects from PSA to Projects in Jira workflow is enabled using the Feature Console.</inlineHelpText>
        <label>Sync PSA Projects to Jira Projects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Sync_PSA_Resources_to_Jira_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether PSA resources should be synchronized to Jira users.</description>
        <inlineHelpText>Indicates whether PSA resources should be synchronized to Jira users. Automatically populates when the Sync Resources from PSA to Users in Jira workflow is enabled using the Feature Console.</inlineHelpText>
        <label>Sync PSA Resources to Jira Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Status__c</fullName>
        <defaultValue>&apos;Saved&apos;</defaultValue>
        <description>Status in which timecards are created.</description>
        <inlineHelpText>Status in which timecards are created.</inlineHelpText>
        <label>Timecard Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Update_Projects_Based_on_Issue_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether PSA Projects should be updated based on Jira issue status.</description>
        <inlineHelpText>Indicates whether PSA Projects should be updated based on Jira issue status.</inlineHelpText>
        <label>Update Projects Based on Issue Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Jira_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Jira application provided in the Jira Application URL is a Jira Cloud version.</description>
        <inlineHelpText>Indicates whether the Jira application provided in the Jira Application URL is a Jira Cloud version. Leave deselected if you are using Jira Server.</inlineHelpText>
        <label>Use Jira Cloud</label>
        <type>Checkbox</type>
    </fields>
    <label>Integration Hub Connector: Jira - PSA</label>
</CustomObject>